frontend: fix horizontal scrollbar checklist on mobile
This fixes having horizontal scrollbar on mobile on the checklist
step of the setup.

--- a/frontends/web/src/components/forms/checkbox.module.css
+++ b/frontends/web/src/components/forms/checkbox.module.css
@@ -1,6 +1,7 @@
 .checkbox input {
-    position: absolute;
+    left: 0;
     opacity: 0;
+    position: absolute;
 }
 
 .checkbox input + label {
